--- a/app/src/main/res/layout/activity_cook_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_cook_recipe_detail.xml
@@ -8,10 +8,12 @@
     tools:context=".CookRecipeDetailActivity">
 
     <WebView
-        android:layout_width="match_parent"
-        android:layout_height="250sp"
         android:id="@+id/webView"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="405dp"
+        android:layout_height="189dp"
+        android:layout_marginTop="12dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-5dp" />
 
     <TextView
         android:id="@+id/recipeDetail"
@@ -24,5 +26,6 @@
         app:layout_constraintTop_toBottomOf="@+id/webView"
         app:layout_constraintVertical_bias="0.155"
         tools:ignore="MissingConstraints" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
