--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,34 +17,18 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="-115dp">
 
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="134dp"
-            android:layout_height="58dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="137dp"
-            android:layout_marginTop="328dp"
-            android:layout_marginEnd="140dp"
-            android:layout_marginBottom="81dp"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.836" />
-
         <VideoView
             android:id="@+id/videoView2"
-            android:layout_width="316dp"
-            android:layout_height="274dp"
+            android:layout_width="wrap_content"
+            android:layout_height="267dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="47dp"
-            android:layout_marginTop="218dp"
-            android:layout_marginEnd="47dp" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="194dp"
+            android:layout_marginEnd="41dp"
+            android:layout_marginBottom="270dp" />
 
 
     </RelativeLayout>
